v0.15.0/_sources/generated/statsmodels.discrete.discrete_model.ProbitResults.rst.txt
statsmodels.discrete.discrete\_model.ProbitResults
==================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: ProbitResults
   :exclude-members: conf_int,cov_params,f_test,get_distribution,get_influence,get_margeff,get_prediction,info_criteria,initialize,load,normalized_cov_params,pred_table,predict,remove_data,save,score_test,set_null_options,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ProbitResults.conf_int
      ~ProbitResults.cov_params
      ~ProbitResults.f_test
      ~ProbitResults.get_distribution
      ~ProbitResults.get_influence
      ~ProbitResults.get_margeff
      ~ProbitResults.get_prediction
      ~ProbitResults.info_criteria
      ~ProbitResults.initialize
      ~ProbitResults.load
      ~ProbitResults.normalized_cov_params
      ~ProbitResults.pred_table
      ~ProbitResults.predict
      ~ProbitResults.remove_data
      ~ProbitResults.save
      ~ProbitResults.score_test
      ~ProbitResults.set_null_options
      ~ProbitResults.summary
      ~ProbitResults.summary2
      ~ProbitResults.t_test
      ~ProbitResults.t_test_pairwise
      ~ProbitResults.wald_test
      ~ProbitResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ProbitResults.aic
      ~ProbitResults.bic
      ~ProbitResults.bse
      ~ProbitResults.fittedvalues
      ~ProbitResults.im_ratio
      ~ProbitResults.llf
      ~ProbitResults.llnull
      ~ProbitResults.llr
      ~ProbitResults.llr_pvalue
      ~ProbitResults.prsquared
      ~ProbitResults.pvalues
      ~ProbitResults.resid_dev
      ~ProbitResults.resid_generalized
      ~ProbitResults.resid_pearson
      ~ProbitResults.resid_response
      ~ProbitResults.tvalues
      ~ProbitResults.use_t
   
   
   